# cert-service

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  not-found.tsx
frontend/app/api/certificates/: route.ts
frontend/app/inventory/: page.tsx
frontend/app/inventory/certificates/[id]/: page.tsx
frontend/app/inventory/items/[id]/: page.tsx
frontend/components/: CertificatePanel.tsx  CertificateTable.tsx  MetricGrid.tsx  StatusBadge.tsx  VirtualInventoryTable.tsx
frontend/lib/: certificates.ts  inventory.ts
migrations/: 20260629160000_create_certificates.sql
src/: config.rs  db.rs  error.rs  main.rs  models.rs  parser.rs  routes.rs
tls/: Caddyfile
